fix: Alert blinking too close to text (#646)

--- a/climweb/src/climweb/config/static/css/cms_style.css
+++ b/climweb/src/climweb/config/static/css/cms_style.css
@@ -1486,3 +1486,8 @@ figure.work {
 .tag {
     border-radius: var(--border-radius) !important
 }
+
+
+.banner-alert-item-icon {
+            margin: 0 10px !important;
+}
